argocd-manifests/apps/nodejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-svc
spec:
  type: ClusterIP
  selector:
    app: nodejs
  ports:
    - port: 80
      targetPort: 3000
